# Ski_API

./: .gitignore  README.md  backup_db.ps1  cleanup_launcher.py  cleanup_ski_data.py  last_resort.txt  launcher.py  ski_scraper.py  test.txt  tmp_mtnfeed_default.json  tmp_mtnfeed_main.js  tmp_mtnfeed_resort.json  tmp_mtnpowder_feed.json  tmp_palisades_report.html
scripts/: __init__.py
scripts/data_tools/: __init__.py  cleanup_launcher.py  cleanup_ski_data.py  enrich_slope_paths_from_osm.py  launcher.py  merge_similar_slopes.py  ski_scraper.py
scripts/website_scrapers/: __init__.py  base.py  launch_collectors.py
scripts/website_scrapers/kreuzberg/: README.md  __init__.py  collector.py  scraper.py
scripts/website_scrapers/palisades_tahoe/: README.md  __init__.py  collector.py  scraper.py
server/: .env  Cargo.toml  database_push.py
server/.sqlx/: query-27517601b6474697dcb494f664f9560d9dde4056f4988596a8bb56f407c70b2e.json  query-aaef19c7b5cc5727f214f9c4edb211993ca1e197a46aaf74e3162dc014a09702.json  query-bf7a2cda2df57bf8f32f51480a24fa242a147ed65e5649b8ad28516b5e51063b.json  query-cb79604634451082a091203cc34b0e448eb7cc2b5334f9f38cc7f2b8f57f5001.json  query-fe361c16bcd973d3cee5da170c915f387889867881ba8e0ac92085bdc515a9fb.json
server/src/: auth.rs  main.rs  user_service.rs
server/src/routes/: auth.rs  lifts.rs  mod.rs  resorts.rs  slopes.rs  status.rs
server/src/security/: api_key.rs  hash.rs  mod.rs  subscription.rs
testing/leaflet/: leaflet_basic.html
website/: package-lock.json  package.json
website/src/: App.jsx
website/src/api/: auth.js  client.js
(+25 files in other folders)
