[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"

futures-util = "0.3"
url = "2"

rand = "0.8"
base64 = "0.22"
argon2 = "0.5"
password-hash = "0.5"