[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
sqlx = { version = "0.8", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "macros",
    "chrono",
    "time"
] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"

futures-util = "0.3"
url = "2"

rand = "0.8"
base64 = "0.22"
argon2 = "0.5"
password-hash = "0.5"

time = "0.3.44"

actix-cors = "0.7.1"